修改目录结构

--- a/source/package.json
+++ b/source/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase": "4.6.2",
+    "http-proxy-middleware": "^0.18.0",
     "lru-cache": "^4.1.1",
     "route-cache": "0.4.3",
     "vue": "^2.5.16",
