--- a/source/package.json
+++ b/source/package.json
@@ -15,23 +15,6 @@
     "npm": ">=4.0"
   },
   "dependencies": {
-    "compression": "^1.7.1",
-    "cross-env": "^5.1.1",
-    "es6-promise": "^4.1.1",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "firebase": "4.6.2",
-    "http-proxy-middleware": "^0.18.0",
-    "lru-cache": "^4.1.1",
-    "route-cache": "0.4.3",
-    "swiper": "^4.3.3",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.16",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0"
-  },
-  "devDependencies": {
     "autoprefixer": "^7.1.6",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
@@ -41,22 +24,40 @@
     "babel-preset-stage-2": "^6.24.1",
     "chokidar": "^1.7.0",
     "css-loader": "^0.28.7",
+    "compression": "^1.7.1",
+    "cross-env": "^5.1.1",
+    "es6-promise": "^4.1.1",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "4.6.2",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "http-proxy-middleware": "^0.18.0",
     "html-minifier": "^3.5.16",
+    "lru-cache": "^4.1.1",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "postcss-loader": "^2.1.5",
-    "postcss-pxtorem": "^4.0.1",
+    "postcss-plugin-px2rem": "^0.7.0",
+    "route-cache": "0.4.3",
     "rimraf": "^2.6.2",
+    "swiper": "^4.3.3",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.16",
+    "vuex": "^3.0.1",
     "vue-loader": "^15.0.0-beta.1",
     "vue-template-compiler": "^2.5.16",
+    "vuex-router-sync": "^5.0.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
+  },
+  "devDependencies": {
+    "postcss-plugin-px2rem": "^0.7.0"
   }
 }
