--- a/source/package.json
+++ b/source/package.json
@@ -57,7 +57,5 @@
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
   },
-  "devDependencies": {
-    "postcss-plugin-px2rem": "^0.7.0"
-  }
+  "devDependencies": {}
 }
