--- a/source/package.json
+++ b/source/package.json
@@ -1,6 +1,7 @@
 {
   "name": "live-server-renderer",
   "description": "A Vue.js project",
+  "version": "v1.0.0-beta.2",
   "author": "",
   "private": true,
   "scripts": {
